<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/settings_about">
        <Preference
            android:summary="@string/url_twitter"
            android:title="@string/action_follow_me">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://instagram.com/rehan_sandhi_181">
                <extra
                    android:name="SOURCE"
                    android:value="SELF" />
            </intent>
        </Preference>
        <Preference
            android:key="pref_version"
            android:title="@string/version" />
    </PreferenceCategory>

    <PreferenceCategory android:title="Legal Information">
        <PreferenceScreen
            android:title="Licenses"
            android:summary="View licenses and legal notices">
            
            <PreferenceCategory android:title="@string/licenses">
                <Preference
                    android:summary="@string/mpl_license"
                    android:title="@string/app_name">
                    <intent
                        android:action="android.intent.action.VIEW"
                        android:data="https://rehan-sandhi.blogspot.com/2026/02/my-license.html">
                        <extra
                            android:name="SOURCE"
                            android:value="SELF" />
                    </intent>
                </Preference>
                <Preference
                    android:summary="@string/freeware"
                    android:title="@string/hphosts_ad_server_list">
                    <intent
                        android:action="android.intent.action.VIEW"
                        android:data="http://hosts-file.net/">
                        <extra
                            android:name="SOURCE"
                            android:value="SELF" />
                    </intent>
                </Preference>
                <Preference
                    android:summary="@string/license_gnu"
                    android:title="@string/library_netcipher">
                    <intent
                        android:action="android.intent.action.VIEW"
                        android:data="https://rehan-sandhi.blogspot.com/2026/02/my-license.html">
                        <extra
                            android:name="SOURCE"
                            android:value="SELF" />
                    </intent>
                </Preference>
                <Preference
                    android:summary="@string/apache"
                    android:title="@string/snacktory">
                    <intent
                        android:action="android.intent.action.VIEW"
                        android:data="https://rehan-sandhi.blogspot.com/2026/02/my-license.html">
                        <extra
                            android:name="SOURCE"
                            android:value="SELF" />
                    </intent>
                </Preference>
                <Preference
                    android:summary="@string/mit_license"
                    android:title="@string/jsoup">
                    <intent
                        android:action="android.intent.action.VIEW"
                        android:data="http://jsoup.org/license">
                        <extra
                            android:name="SOURCE"
                            android:value="SELF" />
                    </intent>
                </Preference>
            </PreferenceCategory>
            
        </PreferenceScreen>
    </PreferenceCategory>
</PreferenceScreen>
